--- a/website/style.css
+++ b/website/style.css
@@ -43,7 +43,7 @@ body {
 .menu-detail img {
     width: 70%;
     max-width: 200px;
-    height: auto;
+    max-height: 400px;
     margin-bottom: 20px;
 }
 
