--- a/website/style.css
+++ b/website/style.css
@@ -92,10 +92,11 @@ body {
 }
 
 .close {
+    color: red;
     position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 30px;
+    top: 80px;
+    right: 450px;
+    font-size: 40px;
     font-weight: bold;
     cursor: pointer;
 }
