--- a/website/style.css
+++ b/website/style.css
@@ -37,6 +37,7 @@ body {
     flex-wrap: wrap;
     padding: 20px;
     justify-content: space-around;
+grid: 
 }
 
 .product-box {
@@ -48,6 +49,7 @@ body {
     text-align: center;
     cursor: pointer;
     transition: all 0.3s ease;
+    
 }
 
 .product-box:hover {
