--- a/website/Cart/cart.css
+++ b/website/Cart/cart.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ff9d3b;
 }
 
 .cart-item button {
