--- a/website/style.css
+++ b/website/style.css
@@ -59,6 +59,10 @@ body {
     text-align: center;
     cursor: pointer;
     transition: all 0.3s ease;
+    border: 2px solid darkgoldenrod; /* 2px dikke zwarte rand */
+    padding: 20px; /* Ruimte binnen de container */
+    }
+    
 }
 
 .product-box:hover {
