--- a/website/style.css
+++ b/website/style.css
@@ -9,7 +9,7 @@ body {
 
 /* Top bar menu */
 .menu-bar {
-    width: 100%;
+    width: 75%;
     background-color: #ffffff;
     padding: 10px 0;
     display: flex;
@@ -17,7 +17,7 @@ body {
     justify-content: center; /* Center the menu items */
     align-items: center;
     position: absolute; /* Initially position in the middle */
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000; /* Ensure it is above other elements */
@@ -297,7 +297,8 @@ body {
 
 .logo {
     width: 100%;
-    max-width: 200px;
+    padding: 60px;
+    max-width: 400px;
     margin: 20px auto;
     display: block;
     transition: opacity 0.3s ease; /* Add transition for smooth hiding */
