--- a/website/style.css
+++ b/website/style.css
@@ -22,6 +22,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     transition: all 0.3s ease; /* Add transition for position and background color */
+    z-index: 1;
 }
 
 .menu-bar.top {
