--- a/website/style.css
+++ b/website/style.css
@@ -272,8 +272,9 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
-    border-bottom: 2px solid #ff9d3b;
+    border-bottom: 2px solid #ff8c00; /* Change this to the orange color */
 }
+
 
 .cart-item button:hover {
     background-color: #b71c1c;
