--- a/website/style.css
+++ b/website/style.css
@@ -125,11 +125,12 @@ body {
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 30px;
+    top: 110px;
+    right: 450px;
+    font-size: 60px;
     font-weight: bold;
     cursor: pointer;
+    color: red;
 }
 
 #add-to-cart {
